// Copyright 2024 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.feature;
option go_package = "github.com/bucketeer-io/bucketeer/proto/feature";

message FlagTrigger {
  enum Type {
    Type_UNKNOWN = 0;
    Type_WEBHOOK = 1;
  }
  enum Action {
    Action_UNKNOWN = 0;
    Action_ON = 1;
    Action_OFF = 2;
  }
  string id = 1;
  string feature_id = 2;
  string environment_namespace = 3;
  Type type = 4;
  Action action = 5;
  string description = 6;
  int32 trigger_count = 7;
  int64 last_triggered_at = 8;
  string token = 9;
  bool disabled = 10;
  int64 created_at = 11;
  int64 updated_at = 12;
}